Incorporate first part of reviewed upstream changes from MilovdZee